# Checkers-1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  checkersLibrary.h  conclusions.txt  game.c  game.h  gameData.txt  gameLogic.c  gameLogic.h  graphics.c  graphics.h  list.c  list.h  main.c  slot1.txt
